--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,4 @@ build/
 ### VS Code ###
 .vscode/
 
-*-firebase-adminsdk-*.json
+src/main/resources/jeas-cfe02-firebase-adminsdk-lcsyq-b7fb4da383.json
